--- a/vignettes/fars_functions_details.Rmd
+++ b/vignettes/fars_functions_details.Rmd
@@ -23,39 +23,37 @@ In order to load the data for a single year, two functions must be used.
 `fars_read()`
 
 ```{r, echo=FALSE, results='asis'}
-fn <- make_filename(2013); #this assigns the value accident_[argument].csv.bz2, in this case     
-                           #accident_2013.csv.bz2
-
-fars_2013 <- fars_read(fn); #reads in the single FARS file; in this case, accident_2013.csv.bz2
+fn <- make_filename(2013); 
 ```
 
+This assigns the value `accident_[argument].csv.bz2`, in this case `accident_2013.csv.bz2`
+
+```{r, echo=FALSE, results='asis'}
+fars_2013 <- fars_read(fn); 
+```
+
+This command reads in the single FARS file; in this case, accident_2013.csv.bz2
 
 ## Retrieves Month & Year from the Accident Year Files
 
-# Retrieve for a Single Year
+### Retrieve for a Single Year
 
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
+To load and explore the fatality data for a single year is, the `fars_read_years()` function must be used. 
+This function can take a single year as input (shown below) and returns a list containing one element, a `tidyverse` dataframe (`tbl_df`) with the year and month of all the accidents within the year specified.  
 
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
 
-# Retrieve for Multiple Years
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+```{r, echo=FALSE, results='asis'}
+fars_2013 <- fars_read_years(2013); 
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+### Retrieve for Multiple Years
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
+To load and explore the fatality data for multiple years, we still use the `fars_read_years()` function; however, in this case, the input is a vector of years (shown below). This function, once executed, willit return a list containing one element for each year in the input vector. Each element will be in the format of a `tidyverse` dataframe (`tbl_df`) with the year and month of all the accidents within the year specified.  
 
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
+
+```{r, echo=FALSE, results='asis'}
+fars_2014 <- fars_read_years(2013:2015); 
+```
 
 ## More Examples
 
