--- a/vignettes/fars_functions_details.Rmd
+++ b/vignettes/fars_functions_details.Rmd
@@ -22,14 +22,14 @@ In order to load the data for a single year, two functions must be used.
 `make_filename()`
 `fars_read()`
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 fn <- make_filename(2013) 
 fn
 ```
 
 This assigns the value `accident_[argument].csv.bz2`, in this case `accident_2013.csv.bz2`
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 fars_2013 <- fars_read(fn)
 fars_2013
 ```
@@ -44,7 +44,7 @@ To load and explore the fatality data for a single year is, the `fars_read_years
 This function can take a single year as input (shown below) and returns a list containing one element, a `tidyverse` dataframe (`tbl_df`) with the year and month of all the accidents within the year specified.  
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 fars_2013 <- fars_read_years(2013)
 fars_2013
 ```
@@ -54,7 +54,7 @@ fars_2013
 To load and explore the fatality data for multiple years, we still use the `fars_read_years()` function; however, in this case, the input is a vector of years (shown below). This function, once executed, willit return a list containing one element for each year in the input vector. Each element will be in the format of a `tidyverse` dataframe (`tbl_df`) with the year and month of all the accidents within the year specified.  
 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 fars_2013_15 <- fars_read_years(2013:2015)
 fars_2013_15
 ```
@@ -62,7 +62,7 @@ fars_2013_15
 ## Summarizing FARS Data 
 Takes specific years (either a single value denoting a single year or a vector of values denoting multiple years, like the input for the `fars_read_years()` function). The output of this function is a summary of counts of accidents for each month and year. 
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 fars_summ_2013 <- fars_summarize_years(2013)
 fars_summ_2013
 
@@ -75,7 +75,7 @@ fars_summ_2013_15
 Takes input of a `state.num` (a numerical integer denoting the US state as is shown in the data set) and `year` (numerical integer denoting the year) as arguments and plots the accidents onto a map of the states. If the state number is invalid, an error is thrown. If there are no accidents in that state, a message is returned that there are no accidents to plot. Otherwise, it returns a plot of states with the number of accidents on each states the accidents based on the `year`. Returns an error if `state.num` or if 
 `year` do not exist in the data set.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, eval=FALSE}
 library(mapdata)
 fars_summ <- fars_map_state(20, 2013)
 ```
